src/components/movie-view/movie-view.scss
	//React player css
	.player-wrapper {
	position: relative;
	padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
	width: 100%;
	height: 100%;
	
 	 }


	  #col-remove {
		flex: none;
	}

  #container {
	max-width: none;
  	}
  
	.react-player {
		position: absolute;
		top: -5%;
		left: 0;
		width: auto;
		height: auto;
		}


  //users favorites bookmark css
  .outline-bookmark, .full-bookmark {
	cursor: pointer;
	}
	.move-bookmark-mv {
	width: 3.2vw;
	height: auto;
	position: absolute;
	position: relative;
	top:0px;
	right: -4px;
	color: orangered;
	background-color: rgba(0,0,0,.2);
	}
	
	#similar-movies {
		display: flex;
		flex-wrap: wrap;
	}

  	//font style css
  .font-style-bold {
	font-family: 'Roboto', sans-serif;
	font-weight: 500;
	}

	.font-style {
	font-family: 'Roboto', sans-serif;
	}

	.font-style-i {
	font-style: italic;
	}

	//H2 heading styles
	.movie-description-heading {
		color: black;
		border-left:solid 9px #ff4500;
		padding-left: 8px;
	}

	//container for top section with gradient background
		#movie-view-section-top {
		width: 100vw;
		max-width: none;
		position: relative;
		left: 50vw;
		left: -50vw;
		margin-left: 50%;
		overflow: hidden;
		background: radial-gradient(circle at 10% 20%, rgb(0, 0, 0) 0%, rgb(91, 90, 90) 90.2%);
	}


	//styling for description, director, writers,actors and genres
	.movie-styles-name {
	color: black;
	font-size: 1em;
	}

	//white container that holds the bottom movie description 
	#movie-view-section-bottom {
		background-color: white;
		// height: 100%;
		width: 100vw;
		max-width: 100vw;
		position: relative;
		left: 50vw;
		left: -50vw;
		margin-left: 50%;
		overflow-x: hidden;
	}

	//grey container that holds content in bottom section 
	#movie-description-section-bottom {
		background: #F5f5f5;
		width: 100vw;
		max-width: 100vw;
		position: relative;
		left: 50vw;
		left: -50vw;
		margin-left: 50%;
	}

	//css for movie case poster
	#movie-image {
		display: none;
	}

	//css for release date, rating, and movie length
	.movie-stats {
		color: #BDBDBD;
		font-size: 0.9em;
		padding: 15px;
		position: absolute;
		position: relative;
		bottom: 12px;
	}


	//movie description styling
	.movie-description {
		color: black;
		font-size: 1.1em;
	}

	//movie title style
	.title-style {
		font-size: 4vw;
		padding-left: 15px;
	}



	// //media queries for all screen size responsiveness

	@media (min-width: 576px) {

		#col-remove {
			flex: none;
		}

		.col {
			flex: none;
		}

		#movie-image {
			display: block;
		position: relative;
		top: 35px;
		width: 100%;
		height: 100%;
	}
	}

	@media (min-width: 521px) and (max-width: 575px) {

		#movie-image {
			display: none;
		}

	.player-wrapper {
		width: 210%;
		height: 180%;
		position: absolute;
		position: relative;
		bottom: 15px;
		right: 250px;
	}

	#movie-content {
		position: absolute;
		position: relative;
		bottom: 40px;
	}

	#movie-view-section-top {
				padding: 40px;
	
			}

			.movie-stats {
						font-size: 8px;
				position: absolute;
				position: relative;
				// right: 55px;
				top: -24px;
			}	

				.move-bookmark-mv {
						position: absolute;
						position: relative;
						width: 5vw;
						top: -1px;
				}
	}

	@media (min-width: 484px) and (max-width: 520px) {

		#movie-view-section-top {
			padding: 40px;

		}

		#movie-content {
			position: absolute;
			position: relative;
			bottom: 40px;
		}

		.player-wrapper {
			width: 210%;
			height: 180%;
			position: absolute;
			position: relative;
			bottom: 5px;
			right: 235px;
		}

		.movie-stats {
			font-size: 9px;
	position: absolute;
	position: relative;
	// right: 55px;
	top: -20px;
}	
	}

	@media (min-width: 389px) and (max-width: 485px) {

		#movie-view-section-top {
			padding: 40px;

		}

		.movie-stats {
			font-size: 0.8em;
			position: absolute;
			position: relative;
			bottom: 16px;
		}

		#movie-content {
			position: absolute;
			position: relative;
			bottom: 40px;
		}

		.player-wrapper {
			width: 240%;
			height: 195%;
			position: absolute;
			position: relative;
			bottom: 10px;
			right: 240px;
		}
	}

	@media (min-width: 390px) and (max-width: 440px) {

		.player-wrapper {
			width: 230%;
			height: 205%;
			position: absolute;
			position: relative;
			bottom: 10px;
			right: 200px;
		}
	}

	@media (min-width: 364px) and (max-width: 390px) {

		.player-wrapper {
			width: 265%;
			height: 215%;
			position: absolute;
			position: relative;
			bottom: 10px;
			right: 220px;
		}

		#movie-view-section-top {
			padding: 40px;

		}

		#movie-content {
			position: absolute;
			position: relative;
			bottom: 35px;
			left: 18px;
		}

		.movie-stats {
			font-size: 0.8em;
			position: absolute;
			position: relative;
			bottom: 16px;
		}
	}

	@media (min-width: 339px) and (max-width: 364px) {

		.player-wrapper {
			width: 265%;
			height: 215%;
			position: absolute;
			position: relative;
			bottom: 10px;
			right: 200px;
		}

		#movie-view-section-top {
			padding: 40px;

		}

		#movie-content {
			position: absolute;
			position: relative;
			bottom: 35px;
			left: 18px;
		}

		.movie-stats {
			font-size: 0.8em;
			position: absolute;
			position: relative;
			bottom: 16px;
		}
	}

	@media (min-width: 319px) and (max-width: 340px) {

		.player-wrapper {
			width: 280%;
			height: 230%;
			position: absolute;
			position: relative;
			bottom: 05px;
			right: 190px;
		}

		#movie-view-section-top {
			padding: 40px;

		}

		#movie-content {
			position: absolute;
			position: relative;
			bottom: 35px;
			left: 18px;
		}

		.movie-stats {
			font-size: 0.8em;
			position: absolute;
			position: relative;
			bottom: 16px;
		}
	}
/* ... */

